# RustSplatNav

./: .gitignore  .gitmodules  README.md  STARTUP_GUIDE.md  setupvm.bash
docker/: .env  Dockerfile  Dockerfile.gaussmi_lean  docker-compose.yml  robot.yaml  setup-x11.sh
relay/ros1/: gaussmi_ros1_relay.py
ros2_ws/: justfile  launch_gaussmi_headless.sh
ros2_ws/.cargo/: config.toml
ros2_ws/src/gaussmi_relay/gaussmi_relay/: ros2_side.py
ros2_ws/src/rust_control/: Cargo.toml
ros2_ws/src/rust_control/spin_robot_node/: Cargo.toml  package.xml
ros2_ws/src/rust_control/spin_robot_node/src/: main.rs
ros2_ws/src/spin_robot_node/spin_robot_node/: nbv_nav2_bridge.py
