[package]
name = "spin_robot_node"
version = "0.0.1"
authors = ["root <root@todo.todo>"]
edition = "2021"

[[bin]]
name = "spin_robot_node"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rclrs = "*"
geometry_msgs = "*"
builtin_interfaces = "*"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
